--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link href="photo1.jpg" rel="icon">
     <title>Document</title>
@@ -13,16 +13,20 @@
     <nav>
         <img src="likitha yadav.png" class="logo">
         <ul>
-            <li><a href="file:///C:/Users/Likitha%20Yadav%20G/Desktop/html/index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Me</a></li>
             <li><a href="./likki.html">Skills</a></li>
             <li><a href="./mygallery.html">My Gallery</a></li>
             <li><a href="./contact.html">Contact me</a></li>
         </ul>
     </nav>
-    <img src=""  id="class24" height="400px" width="400px" alt="my image">
-    <p>In a world driven by innovation and ingenuity, I find myself at the crossroads of creativity, leadership, and design. My journey has been an exploration of self-discovery and continuous growth, which has shaped my unique identity as an individual committed to making a difference through my skills and abilities.
-</p>
+    <img src="likithaimage.jpg"  id="class24" height="400px" width="400px" alt="my image">
+    <pre>
+
+
+
+    </pre>
+    <p>In a world driven by innovation and ingenuity, I find myself at the crossroads of creativity, leadership, and design. My journey has been an exploration of self-discovery and continuous growth, which has shaped my unique identity as an individual committed to making a difference through my skills and abilities.</p>
 <p>Creative thinking is the lifeblood that courses through my veins. From a young age, I possessed a vivid imagination, seeking imaginative solutions to everyday challenges. This ability to think outside the box has granted me a fresh perspective on problem-solving, enabling me to create unconventional yet effective strategies. Whether it's devising marketing campaigns, conceptualizing engaging visual designs, or crafting innovative projects, I am always eager to infuse a touch of creativity into everything I undertake.
 
 </p>Leadership is not just a title but a way of life for me. I am naturally inclined to lead by example, inspire others, and foster collaborative environments. Throughout my educational and professional endeavors, I have assumed various leadership roles, each time leaving a lasting impact on the teams I worked with. My leadership style revolves around empathy, active listening, and empowering others to unleash their full potential. Guiding a team towards a shared vision is a challenge I wholeheartedly embrace, and I relish the opportunity to inspire those around me.
@@ -35,12 +39,20 @@
 
 </p>
 <p>In conclusion, my journey has been one of exploration, innovation, and resilience. My creative thinking, leadership qualities, and designing skills form the pillars upon which I continue to build my future. From overcoming obstacles to embracing opportunities for growth, I am committed to making a meaningful impact through my abilities and unwavering dedication to effective learning. Through each endeavor, I aspire to leave a lasting legacy that inspires others to discover their potential and contribute to a brighter, more innovative world.
+<pre>
 
+
+
+
+</pre>
 
 
 
 </p>
 </p>
+<footer>
+    <p>&copy; 2023 Likitha yadav. All rights reserved.</p>
+  </footer>
 </div>
 </body>
 </html>
