--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -24,6 +24,7 @@
         <li><a href="./likki.html">Skills</a></li>
         <li><a href="./mygallery.html">My Gallery</a></li>
         <li><a href="./contact.html">Contact me</a></li>
+        <li><a href="./herooo.html">Hero&model</a></li>
     </ul>
 </nav>
 
