--- a/portfolio/herooo.html
+++ b/portfolio/herooo.html
@@ -5,13 +5,13 @@
   <!-- Include necessary meta tags and stylesheets -->
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <div class="entire_he">
-    <nav>
+    <nav class="nav">
       <img src="likitha yadav.png" class="logo">
       <ul>
           <li><a href="./index.html">Home</a></li>
@@ -19,8 +19,7 @@
           <li><a href="./likki.html">Skills</a></li>
           <li><a href="./mygallery.html">My Gallery</a></li>
           <li><a href="./contact.html">Contact me</a></li>
-          <li><a href="./herooo.html">Hero&model</a></li>
-          <li><a href="./prallax.html">Hero&model</a></li>
+          <li><a href="./prallax.html">parallax</a></li>
       </ul>
   </nav>
   <section class="hero">
@@ -76,6 +75,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+<footer>
+  <p>&copy; 2023 Likitha yadav. All rights reserved.</p>
+</footer>
 </div>
 </body>
 </html>
