--- a/portfolio/mygallery.html
+++ b/portfolio/mygallery.html
@@ -17,12 +17,11 @@
   <nav>
     <img src="likitha yadav.png" class="logo">
     <ul>
-        <li><a href="file:///C:/Users/Likitha%20Yadav%20G/Desktop/html/index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About Me</a></li>
         <li><a href="./likki.html">Skills</a></li>
         <li><a href="./mygallery.html">My Gallery</a></li>
         <li><a href="./contact.html">Contact me</a></li>
-        <li><a href="./herooo.html">Hero&model</a></li>
     </ul>
 </nav>
   <div class="container">
