--- a/portfolio/prallax.html
+++ b/portfolio/prallax.html
@@ -9,22 +9,29 @@
     
 </head>
 <body>
-    <div class="nav-container">
-    <nav>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About Me</a></li>
-            <li><a href="./likki.html">Skills</a></li>
-            <li><a href="./mygallery.html">My Gallery</a></li>
-            <li><a href="./contact.html">Contact me</a></li>
-            <li><a href="./herooo.html">Hero&model</a></li>
-        </ul>
-    </nav>
+  <div class="entire_plx">
+    <nav class="nav">
+      <img src="likitha yadav.png" class="logo">
+      <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About Me</a></li>
+          <li><a href="./likki.html">Skills</a></li>
+          <li><a href="./mygallery.html">My Gallery</a></li>
+          <li><a href="./contact.html">Contact me</a></li>
+          <li><a href="./herooo.html">Hero&model</a></li>
+      </ul>
+  </nav>
   
   <header>
     <!-- ... carousel content ... -->
   </header>
-  
+  <pre>
+
+
+
+
+
+  </pre>
   <section class="parallax">
     <div class="parallax-content">
       <h1>Parallax Scrolling</h1>
